# python-wex-addon-dev-css

./: .gitignore  README.md  pyproject.toml
.wex/: config.yml
.wex/python/app_manager/: requirements.txt
src/wexample_wex_addon_dev_css/: css_addon_manager.py
src/wexample_wex_addon_dev_css/workdir/: css_package_workdir.py  css_packages_suite_workdir.py  css_workdir.py
