[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[[tool.pdm.build.packages]]
include = "wexample_wex_addon_dev_css"
from = "src"

[project]
name = "wexample-wex-addon-dev-css"
version = "0.0.3"
requires-python = ">=3.10"
dependencies = [
    "attrs>=23.1.0",
    "cattrs>=23.1.0",
    "wexample-wex-core==6.0.45",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
