[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wexample-wex-addon-dev-css"
version = "0.0.11"
authors = [{name = "weeger", email = "contact@wexample.com"}]
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]
dependencies = [
    "attrs>=23.1.0",
    "cattrs>=23.1.0",
    "wexample-wex-addon-app==0.0.49",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[[tool.pdm.build.packages]]
include = "wexample_wex_addon_dev_css"
from = "src"
[tool.setuptools.packages.find]
include = ["*"]
exclude = ["wexample_wex_addon_dev_css.testing*"]
